<resources>

    <string name="app_name">AdminShop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="discounts">Discounts</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="users">Users</string>
    <string name="reviews">Reviews</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="add">Add new</string>
    <string name="logout">Log out</string>
    <string name="search_for">Search for pattern</string>
    <string name="search">Search</string>
    <string name="serach_in">Search in:</string>
    <string name="product_images">Product images</string>
    <string name="image">Image:</string>
    <string name="thumbnail">Thumbnail:</string>
    <string name="no_image">No image uploaded</string>
    <string name="no_thumbnail">No thumbnail uploaded</string>
    <string name="recommended_size">(recommended size: 50x50&#8211;150x150)</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_thumbnail">Upload thumbnail</string>
    <string name="product_owner">Product owner</string>
    <string name="provider">Provider:</string>
    <string name="classification">Classification</string>
    <string name="main_category">Main category:</string>
    <string name="additional_categories">Additional categories:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="availability">Availability:</string>
    <string name="details">Details</string>
    <string name="sku">SKU:</string>
    <string name="product_name">Product name:</string>
    <string name="clean_url">Clean URL:</string>
    <string name="search_keywords">Search keywords:</string>
    <string name="esd_distribution">ESD distribution:</string>
    <string name="short_description">Short description:</string>
    <string name="detailed_description">Detailed description:</string>
    <string name="title_tag">Title tag:</string>
    <string name="meta_keywords">META keywords:</string>
    <string name="meta_description">META description:</string>
    <string name="price">Price ($):</string>
    <string name="list_price">List price (market price) ($):</string>
    <string name="quantity">Quantity in stock (items):</string>
    <string name="low_limit">Low limit in stock:</string>
    <string name="min_order">Minimum order quantity:</string>
    <string name="product_ret_time">Product return time (days):</string>
    <string name="weight">Weight (lbs):</string>
    <string name="free_shipping">Free shipping:</string>
    <string name="shipping_freight">Shipping freight ($):</string>
    <string name="use_the_dimensions">Use the dimensions of this product for shipping cost calculation</string>
    <string name="shipping_box_dimensions">Shipping box dimensions (inches):</string>
    <string name="separate_box">Ship in a separate box</string>
    <string name="quantity_shipping_box">Quantity per shipping box:</string>
    <string name="membership">Membership:</string>
    <string name="tax">Tax exempt:</string>
    <string name="apply_global_discounts">Apply global discounts</string>
    <string name="isbn">ISBN:</string>
    <string name="type">Type:</string>
    <string name="apply_changes">Apply changes</string>
    <string name="product_title">Product title</string>
    <string name="short_descript">Short description</string>
    <string name="detailed_descript">Detailed description</string>
    <string name="search_keywordsText">Search keywords</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="order_subtotal">Order subtotal</string>
    <string name="discount">Discount</string>
    <string name="discount_type">Discount type</string>
    <string name="membership_text">Membership</string>
    <string name="all">All</string>
    <string name="premium">Premium</string>
    <string name="wholesale">Wholesale</string>
    <string name="null_number">0.00</string>
    <string name="all_dates">All dates</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>
    <string name="today">Today</string>
    <string name="height">Height:</string>
    <string name="width">Width:</string>
    <string name="length">Length:</string>
    <string name="xcart">X-cart.com</string>
    <string name="admin_area">Log in to admin area</string>
    <string name="login">Log in</string>
    <string name="menu">Menu</string>
    <string name="welcome">Welcome to your store</string>
    <string name="settings">Settings</string>
    <string name="back">&lt; Back</string>
    <string name="current">Current</string>
    <string name="right_arrow">&gt;&gt;</string>
    <string name="left_arrow">&lt;&lt;</string>
    <string name="add_discount">Add new discount</string>
    <string name="enter_value">Enter a value:</string>
    <string name="percent">Percent, %</string>
    <string name="absolute">Absolute, $</string>
    <string name="last_order">Last Order</string>
    <string name="oreders_info">Orders info</string>
    <string name="top_sellers">Top sellers</string>
    <string name="sales_growth">Sales growth</string>
    <string name="id_text">ID:</string>
    <string name="date_text">Date:</string>
    <string name="product_text">Products:</string>
    <string name="quantity_text">Quantity:</string>
    <string name="total_price_text">Total price:</string>
    <string name="user_text">User:</string>
    <string name="status_text">Status:</string>
    <string name="total_orders">Total orders:</string>
    <string name="complete_orders">Complete:</string>
    <string name="in_process_orders">In process:</string>
    <string name="total_paid">Total paid:</string>
    <string name="date_period">Date period:</string>
    <string name="pin">PIN</string>
    <string name="unlock">Unlock</string>
    <string name="topProducts">Top 10 products</string>
    <string name="sold">Sold</string>
    <string name="not_finished">Not finished:</string>
    <string name="queued">Queued:</string>
    <string name="processed">Processed:</string>
    <string name="backordered">Backordered:</string>
    <string name="declined">Declined:</string>
    <string name="failed">Failed:</string>
    <string name="top_categories">Top 10 categories</string>
    <string name="information">Information</string>
    <string name="search_users">Search for users</string>
    <string name="registered">Registered:</string>
    <string name="online">Online:</string>
    <string name="add_new_discount">Add new discount</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sort_by">Sort by:</string>
    <string name="last_login_date">Last login</string>
    <string name="last_order_date">Last order</string>
    <string name="total_reviews">Total reviews</string>
    <string name="total_orders_text">Total orders</string>
    <string name="login_text">Login:</string>
    <string name="user_type">User type:</string>
    <string name="last_login_text">Last login:</string>
    <string name="user_email_text">User\'s email:</string>
    <string name="review_product_text">Product:</string>
    <string name="message_text">Message:</string>
    <string name="gross_total">Gross total:</string>
    <string name="action">Choose an action</string>
    <string name="enter_to_app">Enter into admin area</string>
    <string name="product_available">Available:</string>
    <string name="product_sold">Sold:</string>
    <string name="enter_price">Enter the new price:</string>
    <string name="message">Message</string>
    <string name="last">Last</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="latest_info">Latest info</string>
    <string name="today_orders">Today orders info</string>

    <string-array name="screens">
        <item>Menu</item>
        <item>Latest info</item>
    </string-array>
    
    <string-array name="screens_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>