<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/discounts"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/add_discount"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:paddingLeft="10dp"
                android:text="@string/order_subtotal"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/enter_value"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/orderSubtotalEditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal"
                android:minWidth="100dp"
                android:text="@string/null_number" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:paddingLeft="10dp"
                android:text="@string/discount"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/enter_value"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/discountEditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal"
                android:minWidth="100dp"
                android:text="@string/null_number" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:paddingLeft="10dp"
                android:text="@string/discount_type"
                android:textSize="15sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/percentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/percent"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/absoluteRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/absolute"
                    android:textSize="12sp" />
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:paddingLeft="10dp"
                android:text="@string/membership_text"
                android:textSize="15sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/allRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/all"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/premiumRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/premium"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/wholesaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wholesale"
                    android:textSize="12sp" />
            </RadioGroup>

            <Button
                android:id="@+id/okButton"
                style="@style/MainButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:minWidth="100dp"
                android:onClick="okClick"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>