<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/xcart"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/unlock"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <kankan.wheel.widget.WheelView
                android:id="@+id/passw_1"
                android:layout_width="60dp"
                android:layout_height="80dp" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/passw_2"
                android:layout_width="60dp"
                android:layout_height="80dp" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/passw_3"
                android:layout_width="60dp"
                android:layout_height="80dp" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/passw_4"
                android:layout_width="60dp"
                android:layout_height="80dp" />
        </LinearLayout>

        <Button
            android:id="@+id/unlockOkButton"
            style="@style/MainButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:onClick="okButtonClick"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>